--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <meta charset="utf-8"/>
-    <title>Bitcoin</title>
+    <title>Kryptokyttääjä</title>
     Tekstiä, tekstiä, tekstiä, tekstiä..
   </head>
   
