--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   <meta charset="utf-8"/>
     <title>Kryptokyttääjä</title>
-    <h1>Kryptokyttääjä</h1>
+    <h1>Kryptokyttääjä / When Lambo-indeksi</h1>
   </head>
   
   <body>
