--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <meta charset="utf-8"/>
     <title>Kryptokyttääjä</title>
     <h1>Kryptokyttääjä / When Lambo-indeksi</h1>
+    <style>
+  .warning {
+  border: 10px outset red;
+  background-color: white;    
+  text-align: center;
+  font-size: 40px;
+}
   </head>
   
   <body>
@@ -13,5 +20,11 @@
       <br>
       <p>Katso video äänet päällä</p>
       <video controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
- </body>
+
+      <div class="warning">
+        <h2>WARNING</h2>
+          <p>Not financial advice!</p>
+      </div>
+      
+  </body>
 </html>
