--- a/index.html
+++ b/index.html
@@ -28,5 +28,17 @@
           <p>Not financial advice!</p>
       </div>
       
+      <p>Muista säännöt:</p>
+        <ol>
+	        <li>Älä sijoita mitä et voi menettää
+          <li>Osta dippiä
+        </ol>
+
+        <ul>
+	        <li>Syö hyvin
+          <li>Nuku paljon
+          <li>Pidä hauskaa
+          <li>Too much styduing will turn your brain into guacamole!
+</ul>
   </body>
 </html>
