--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
   .warning {
-      border: 50px outset red;
+      border: 30px outset red;
       background-color: white;    
       text-align: center;
       font-size: 40px;
@@ -30,15 +30,16 @@
       
       <p>Muista säännöt:</p>
         <ol>
-	        <li>Älä sijoita mitä et voi menettää
+	  <li>Älä sijoita mitä et voi menettää
           <li>Osta dippiä
+	  <li>Riko sääntöjä
         </ol>
 
         <ul>
-	        <li>Syö hyvin
+	  <li>Syö hyvin
           <li>Nuku paljon
           <li>Pidä hauskaa
-          <li>Too much styduing will turn your brain into guacamole!
+          <li>Too much styduing will turn your brain into bad guacamole!
 </ul>
   </body>
 </html>
