--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	  <li>Syö hyvin
           <li>Nuku paljon
           <li>Pidä hauskaa
-          <li>Too much styduing will turn your brain into bad guacamole!
+          <li>Too much stydying will turn your brain into bad guacamole!
 </ul>
   </body>
 </html>
