--- a/styles.html
+++ b/styles.html
@@ -5,6 +5,7 @@
     <style>
   .warning {
       border: 30px outset red;
+      color: black;
       background-color: white;    
       text-align: center;
       font-size: 40px;
