--- a/styles.html
+++ b/styles.html
@@ -6,7 +6,7 @@
   .warning {
       border: 30px outset red;
       color: black;
-      background-color: white;    
+      background-color: yellow;    
       text-align: center;
       font-size: 40px;
 }
