--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <style>
   .warning {
       border: 30px outset red;
-      background-color: white;    
+      color: black; 
+      background-color: yellow;    
       text-align: center;
       font-size: 40px;
 }
