--- a/styles.html
+++ b/styles.html
@@ -9,7 +9,7 @@
       background-color: yellow;    
       text-align: center;
       font-size: 40px;
-}
+     }
     </style>
   <meta charset="utf-8"/>
     <title>Kryptokyttääjä</title>
@@ -33,7 +33,7 @@
       </center>
       <br>
       <div class="stylesheet">
-      <p>Muista säännöt:</p>
+      <p>Muista säännöt:
         <ol>
 	  <li>Älä sijoita mitä et voi menettää
           <li>Osta dippiä
@@ -45,7 +45,8 @@
           <li>Nuku paljon
           <li>Pidä hauskaa
           <li>Too much stydying will turn your brain into bad guacamole!
-    </ul>
+        </ul>
+       </p>
     </div>
    </body>
 </html>
