--- a/styles.html
+++ b/styles.html
@@ -32,7 +32,7 @@
        </div>
       </center>
       <br>
-      <div class="stylesheet">
+      <div class="tyyli">
       <p>Muista säännöt:
         <ol>
 	  <li>Älä sijoita mitä et voi menettää
