--- a/styles.html
+++ b/styles.html
@@ -33,7 +33,7 @@
       </center>
       <br>
       <div class="tyyli">
-      <p>Muista säännöt:
+      <p>Muista säännöt:</p>
         <ol>
 	  <li>Älä sijoita mitä et voi menettää
           <li>Osta dippiä
@@ -46,7 +46,6 @@
           <li>Pidä hauskaa
           <li>Too much stydying will turn your brain into bad guacamole!
         </ul>
-       </p>
     </div>
    </body>
 </html>
