--- a/styles.html
+++ b/styles.html
@@ -33,19 +33,22 @@
       </center>
       <br>
       <div class="tyyli">
-      <p>Muista säännöt:</p>
+       <div class="numerot">
+	<p>Muista säännöt:</p>
         <ol>
 	  <li>Älä sijoita mitä et voi menettää
           <li>Osta dippiä
 	  <li>Riko sääntöjä
         </ol>
+	</div>       
        <br>
+	<div class="neliot">
         <ul>
 	  <li>Syö hyvin
           <li>Nuku paljon
           <li>Pidä hauskaa
           <li>Too much stydying will turn your brain into bad guacamole!
         </ul>
-    </div>
+        </div>
    </body>
 </html>
