--- a/styles.html
+++ b/styles.html
@@ -16,20 +16,20 @@
        <p style="text-align:center; height: 14px; ">Katso video äänet päällä</p>
        <video controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
       <br>
-       <div class="warning">
+       <div style="warning">
         <h2>WARNING</h2>
           <p>Not financial advice!</p>
        </div>
       </center>
       <br>
 	<p>Muista säännöt:</p>
-        <ol>
+        <ol style="kirjaimet">
 	  <li>Älä sijoita mitä et voi menettää
           <li>Osta dippiä
 	  <li>Riko sääntöjä
         </ol>       
        <br>
-        <ul>
+        <ul style="neliot">
 	  <li>Syö hyvin
           <li>Nuku paljon
           <li>Pidä hauskaa
