--- a/styles.html
+++ b/styles.html
@@ -23,13 +23,13 @@
       </center>
       <br>
 	<p>Muista säännöt:</p>
-        <ol style="kirjaimet">
+        <ol class="kirjaimet">
 	  <li>Älä sijoita mitä et voi menettää
           <li>Osta dippiä
 	  <li>Riko sääntöjä
         </ol>       
        <br>
-        <ul style="neliot">
+        <ul class="neliot">
 	  <li>Syö hyvin
           <li>Nuku paljon
           <li>Pidä hauskaa
