--- a/styles.html
+++ b/styles.html
@@ -9,7 +9,7 @@
       	
 	<center>
 	      <h1>Kryptokyttääjä / when Lambo-indeksi</h1>
-		Katso video äänet päällä</p>
+		<p>Katso video äänet päällä</p>
           	<h2>WARNING</h2>
           	<p>Not financial advice!</p>
 	</center>
