--- a/styles.html
+++ b/styles.html
@@ -13,7 +13,7 @@
 	<h2>WARNING</h2>
         <p>Not financial advice!</p>
       	<br>
-	<p>Muista säännöt:</p>
+	<p class="tyyli">Muista säännöt:</p>
         <ol class="kirjaimet">
 		<li>Älä sijoita mitä et voi menettää
         	<li>Osta dippiä
