--- a/styles.html
+++ b/styles.html
@@ -13,18 +13,18 @@
 	<h2>WARNING</h2>
         <p>Not financial advice!</p>
       	<br>
-	<p class="tyyli">Muista säännöt:</p>
+	<p>Muista säännöt:
         <ol class="kirjaimet">
 		<li>Älä sijoita mitä et voi menettää
         	<li>Osta dippiä
 		<li>Riko sääntöjä
-	</ol></p>       
+	</ol>       
        	<br>
         <ul class="neliot">
 	<li>Syö hyvin
         <li>Nuku paljon
         <li>Pidä hauskaa
         <li>Too much stydying will turn your brain into bad guacamole!
-	</ul>
+	</ul></p>
 </body>
 </html>
