--- a/styles.html
+++ b/styles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang=fi>
 	<head>
     		<link rel="stylesheet" href="styles.css">
   		<meta charset="utf-8"/>
@@ -35,6 +35,6 @@
         <li>Nuku paljon
         <li>Pidä hauskaa
         <li>Too much stydying will turn your brain into bad guacamole!
-	</ul></p>
+	</ul>
 </body>
 </html>
