--- a/styles.html
+++ b/styles.html
@@ -7,7 +7,7 @@
   	</head>
 <body>      	
 	<h1>Kryptokyttääjä / when Lambo-indeksi</h1>
-	<center>
+	<div style="width:50%;"
 	<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js"></script>
 	<br>
 	<br>
@@ -18,8 +18,8 @@
       	<div class="warning">
         <h2>WARNING</h2>
           <p>Not financial advice!</p>
-         </div>
-	</center>
+        </div>
+	</div>
 	<br>
 	<br>
 	<br>
