--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <li>Pidä hauskaa
         <li>Too much stydying will turn your brain into bad guacamole!
 	</ul></p>
+	<a HREF="second.html">LINKKI 2nd head sivulle</a>
 </body>
 </html>
