--- a/second.html
+++ b/second.html
@@ -1,10 +1,12 @@
-second.html
 <!DOCTYPE HTML>
 <HTML>
     <HEAD>
     2nd HEAD
     </HEAD>
 <BODY>
+2nd PAGE
+New update
+<a HREF="index.html"></a> 
 </BODY>
 </HTML>
 
