Picture added to 2nd page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-	<a HREF="second.html">LINKKI 2nd head sivulle</a>
+	<a HREF="second.html">LINKKI 2nd head sivulle</a><br>
 	<head>
     		<link rel="stylesheet" href="tyyli.css">
   		<meta charset="utf-8"/>
