--- a/second.html
+++ b/second.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
 <HTML>
-    <a HREF="index.html">LINKKI ETUSIVULLE</a>
+    <a HREF="index.html">LINKKI ETUSIVULLE</a><br>
     <HEAD>
     2nd HEAD
     </HEAD>
 <BODY>
-2nd PAGE<br>
-updated<br>
-again<br>
+2nd PAGE is my Head!<br>
+<img src="vader.png">
 </BODY>
 </HTML>
 
