--- a/second.html
+++ b/second.html
@@ -2,7 +2,9 @@
 <HTML>
     <a HREF="index.html">LINKKI ETUSIVULLE</a><br>
     <HEAD>
-    2nd HEAD
+        <link rel="stylesheet" href="tyyli.css">
+        <meta charset="utf-8"/>
+            <title>2nd HEAD</title>
     </HEAD>
 <BODY>
 2nd PAGE is my Head!<br>
