death star update

--- a/second.html
+++ b/second.html
@@ -8,7 +8,8 @@
     </HEAD>
 <BODY>
 2nd PAGE is my Head!<br>
-<img src="vader.png">
+<img src="vader.png"><br>
+<img src="death-star.jpg">
 </BODY>
 </HTML>
 
