--- a/second.html
+++ b/second.html
@@ -7,9 +7,16 @@
             <title>2nd HEAD</title>
     </HEAD>
 <BODY>
-2nd PAGE is my Head!<br>
-<img src="vader.png"><br>
-<img src="death-star.jpg">
+<h1>PROGRESS REPORT</h1>
+<br>
+</BODY>
+<br>
+<img src="death-star.jpg" class="center">
+<h1>Death Star</h1>
+<label for="Death Star">Readiness:</label>
+<progress id="Death Star" value="32" max="100"> 66% </progress>
+<br>
+<img src="vader.png" clss="center"><br>
 </BODY>
 </HTML>
 
