--- a/second.html
+++ b/second.html
@@ -16,7 +16,10 @@
 <label for="Death Star">Readiness:</label>
 <progress id="Death Star" value="32" max="100"> 66% </progress>
 <br>
-<img src="vader.png" clss="center"><br>
+<figure>
+    <img src="vader.png" clss="center"><br>
+    <figcaption="Darth Vader mask"></figcaption>
+</figure>
 </BODY>
 </HTML>
 
