--- a/second.html
+++ b/second.html
@@ -14,10 +14,10 @@
 <img src="death-star.jpg" class="center">
 <h1>Death Star</h1>
 <label for="Death Star">Readiness:</label>
-<progress id="Death Star" value="32" max="100"> 66% </progress>
+<progress id="Death Star" value="66" max="100"> 66%</progress>
 <br>
 <figure>
-    <img src="vader.png" clss="center"><br>
+    <img src="vader.png" class="center"><br>
     <figcaption="Darth Vader mask"></figcaption>
 </figure>
 </BODY>
