--- a/second.html
+++ b/second.html
@@ -12,13 +12,13 @@
 </BODY>
 <br>
 <img src="death-star.jpg" class="center">
-<h1>Death Star</h1>
+<h1 class="center">Death Star</h1>
 <label for="Death Star">Readiness:</label>
 <progress id="Death Star" value="66" max="100"> 66%</progress>
 <br>
 <figure>
-    <img src="vader.png" class="center"><br>
-    <figcaption="Darth Vader mask"></figcaption>
+    <img src="vader.png" class="center">
+    <figcaption="Darth Vader"></figcaption>
 </figure>
 </BODY>
 </HTML>
