--- a/second.html
+++ b/second.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<HTML>
-    <a HREF="index.html">LINKKI ETUSIVULLE</a><br>
+<HTML lang="fi">
     <HEAD>
         <link rel="stylesheet" href="tyyli.css">
         <meta charset="utf-8"/>
             <title>2nd HEAD</title>
     </HEAD>
 <BODY>
-<h1>PROGRESS REPORT</h1>
+    <a HREF="index.html">LINKKI ETUSIVULLE</a><br>
+    <h1>PROGRESS REPORT</h1>
 <br>
 </BODY>
 <br>
