--- a/second.html
+++ b/second.html
@@ -11,13 +11,13 @@
 <br>
 </BODY>
 <br>
-<img src="death-star.jpg" class="center">
+<img src="death-star.jpg" class="center" alt="Death Star">
 <h1 class="center">Death Star</h1>
-<label for="Death Star">Readiness:</label>
-<progress id="Death Star" value="66" max="100"> 66%</progress>
+<label for="DeathStar">Readiness:</label>
+<progress id="DeathStar" value="66" max="100"> 66%</progress>
 <br>
 <figure>
-    <img src="vader.png" class="center">
+    <img src="vader.png" class="center" alt="Darth Vader">
     <figcaption="Darth Vader"></figcaption>
 </figure>
 </BODY>
