--- a/second.html
+++ b/second.html
@@ -17,7 +17,7 @@
 <br>
 <figure>
     <img src="vader.png" class="center" alt="Darth Vader">
-    <figcaption>"Darth Vader"></figcaption>
+    <figcaption>Darth Vader</figcaption>
 </figure>
 </BODY>
 </HTML>
