--- a/second.html
+++ b/second.html
@@ -10,13 +10,13 @@
     <h1>PROGRESS REPORT</h1>
 <br>
 <br>
-<img src="death-star.jpg" class="center" alt="Death Star">
-<h1 class="center">Death Star</h1>
+<img src="death-star.jpg" alt="Death Star">
+<h1>Death Star</h1>
 <label for="DeathStar">Readiness:</label>
 <progress id="DeathStar" value="66" max="100"> 66%</progress>
 <br>
 <figure>
-    <img src="vader.png" class="center" alt="Darth Vader">
+    <img src="vader.png" alt="Darth Vader">
     <figcaption>Darth Vader</figcaption>
 </figure>
 </BODY>
