--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<br>
       	<div class="warning">
         <h2>WARNING</h2>
-          <p>Not financial advice!</p>
+          Not financial advice!
          </div>
 
 	<br>
