--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<br>
 	<br>
 	<br>
-	<p>Muista säännöt:</p>
+	<p style="text-align:center;">Muista säännöt:</p>
         <ol class="kirjaimet">
 		<li>Älä sijoita mitä et voi menettää
         	<li>Osta dippiä
