--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<br>
       	<div class="warning">
         <h2>WARNING</h2>
-          Not financial advice!
+        <h3>Not financial advice!</h3>
          </div>
 
 	<br>
