--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<a HREF="second.html">LINKKI 2nd head sivulle</a><br>
 	<h1>Kryptokyttääjä / when Lambo-indeksi</h1>
 	<br>
+	<p style="text-align:center;">Bitcoin kurssi 24h</p>
 	<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js"></script>
 	<br>
       	<p style="text-align:center;">Katso video äänet päällä</p>
@@ -23,7 +24,7 @@
 	<br>
 	<br>
 	<br>
-	<p style="text-align:center;">Muista säännöt:</p>
+	<p style="text-align:center;">Muista säännöt</p>
         <ol class="kirjaimet">
 		<li>Älä sijoita mitä et voi menettää
         	<li>Osta dippiä
