--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>      	
 	<a HREF="second.html">LINKKI 2nd head sivulle</a><br>
 	<h1>Kryptokyttääjä / when Lambo-indeksi</h1>
-	<br>
 	<p style="text-align:center;">Bitcoin kurssi 24h</p>
 	<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js"></script>
 	<br>
       	<p style="text-align:center;">Katso video äänet päällä</p>
       	<video controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
 	<br>
+	<p style="text-align:center;">Pakollinen varoitus</p>
 	<br>
       	<div class="warning">
-        <h2>WARNING</h2>
-        <h3>Not financial advice!</h3>
+        <h2>VAROITUS</h2>
+        <h3>Ei taloudellisia neuvoja!</h3>
          </div>
 
 	<br>
