--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p style="text-align:center;">Bitcoin kurssi 24h</p>
 	<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js"></script>
 	<br>
-      	<p style="text-align:center; width:60%;">Katso video äänet päällä</p>
+      	<p style="text-align:center;">Katso video äänet päällä</p>
       	<video controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
 	<br>
 	<p style="text-align:center;">Pakollinen varoitus</p>
