--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<p style="text-align:center;">Pakollinen varoitus</p>
 	<br>
       	<div class="warning">
-        <h2>VAROITUS</h2>
-        <h3>Ei taloudellisia neuvoja!</h3>
+        VAROITUS
+        Ei taloudellisia neuvoja!
          </div>
 
 	<br>
