--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<p style="text-align:center;">Pakollinen varoitus</p>
 	<br>
       	<div class="warning">
-        VAROITUS
+        VAROITUS<br>
         Ei taloudellisia neuvoja!
          </div>
 	<br>
