--- a/second.html
+++ b/second.html
@@ -11,9 +11,11 @@
 <br>
 <br>
 <img src="death-star.jpg" alt="Death Star">
+<div class="warning">
 <h1>Death Star</h1>
 <label for="DeathStar">Readiness:</label>
 <progress id="DeathStar" value="66" max="100"> 66%</progress>
+</div>
 <br>
 <figure>
     <img src="vader.png" alt="Darth Vader">
