--- a/second.html
+++ b/second.html
@@ -14,7 +14,7 @@
 <div class="warning">
 <h1>Death Star</h1>
 <label for="DeathStar">Readiness:</label>
-<progress id="DeathStar" value="66" max="100"> 66%</progress>
+<progress id="DeathStar" value="66" max="100"></progress> 66%
 </div>
 <br>
 <figure>
