--- a/second.html
+++ b/second.html
@@ -8,6 +8,7 @@
 <BODY>
     <a HREF="index.html">LINKKI ETUSIVULLE</a><br>
     <h1>PROGRESS REPORT</h1>
+    <p>Death Star</p>
 <br>
 <br>
 <img src="death-star.jpg" alt="Death Star">
