--- a/second.html
+++ b/second.html
@@ -22,6 +22,7 @@
     <img src="vader.png" alt="Darth Vader">
     <figcaption>Darth Vader</figcaption>
 </figure>
+<p>End of report</p>
 </BODY>
 </HTML>
 
