--- a/leiska.html
+++ b/leiska.html
@@ -76,27 +76,26 @@ footer {
 <p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
 
 <header>
-  <h2>Cities</h2>
+  <h1>Säterinmetsän Sanomat</h1>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li><a href="#">Pääsivu</a></li>
+      <li><a href="#">Toinen sivu</a></li>
     </ul>
   </nav>
   
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>Säterinmetsän sää</h1>
+    <p>10.11.2021 sää on kuin Mordorissa. Mitäpä muuta voi odottaa marraskuussa, jolloin kaikkien etätyöläisten ja opiskelijoiden suositellaan pysyttelevän visusti sisällä. Onneksi nykyään on helppo tilata ruokaa kotiin mobiilisovelluksella. Kavereittenkin kanssa voi kätevästi pitää Teams etäkokouksia.</p>
+    <p>Kesää odotellessa voi tehdä kotona kaikkea sitä mitä ei kesällä todellakaan halua tehdä. Hyvällä tuurilla asunnon ehtii siivota joulukuntoon jo ennen joulua eikä sen jälkeen. Mutta jos ei ehdi niin onneksi on koko talvi ja kevät aikaa siivota ennen kesää Juhannusjuhlia ja mökkimatkaa varten. Sieltä onkin sitten kiva tulla siistiin kotiin.</p>
   </article>
 </section>
 
 <footer>
-  <p>Footer</p>
+  <p>(c) Säterinmetsän Sanomat 2021 kaikki oikeudet pidätetään</p>
 </footer>
 
 </body>
