--- a/leiska.html
+++ b/leiska.html
@@ -15,7 +15,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-color: lightcoral;
   padding: 30px;
   text-align: center;
   font-size: 35px;
@@ -27,7 +27,7 @@ nav {
   float: left;
   width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
+  background: darkorange;
   padding: 20px;
 }
 
@@ -41,7 +41,7 @@ article {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #f1f1f1;
+  background-color: lightcyan;
   height: 300px; /* only for demonstration, should be removed */
 }
 
@@ -54,7 +54,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: burlywood;
   padding: 10px;
   text-align: center;
   color: white;
@@ -70,10 +70,6 @@ footer {
 </style>
 </head>
 <body>
-
-<h2>CSS Layout Float</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
 
 <header>
   <h1>Säterinmetsän Sanomat</h1>
