--- a/leiska.html
+++ b/leiska.html
@@ -87,7 +87,9 @@ footer {
     <h1>Säterinmetsän sää</h1>
     <p>10.11.2021 sää on kuin Mordorissa. Mitäpä muuta voi odottaa marraskuussa, jolloin kaikkien etätyöläisten ja opiskelijoiden suositellaan pysyttelevän visusti sisällä. Onneksi nykyään on helppo tilata ruokaa kotiin mobiilisovelluksella. Kavereittenkin kanssa voi kätevästi pitää Teams etäkokouksia.</p>
     <p>Kesää odotellessa voi tehdä kotona kaikkea sitä mitä ei kesällä todellakaan halua tehdä. Hyvällä tuurilla asunnon ehtii siivota joulukuntoon jo ennen joulua eikä sen jälkeen. Mutta jos ei ehdi niin onneksi on koko talvi ja kevät aikaa siivota ennen kesää Juhannusjuhlia ja mökkimatkaa varten. Sieltä onkin sitten kiva tulla siistiin kotiin.</p>
-  </article>
+    <h1>Terveisin</h1>
+    <p>Koko syystoimitus</p>
+</article>
 </section>
 
 <footer>
