--- a/leiska.html
+++ b/leiska.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
-<title>CSS Template</title>
+<title>Säterinmetsän Sanomat</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -10,6 +10,9 @@
 }
 
 body {
+    width: 90%;
+    margin-left:auto;
+    margin-right:auto;
   font-family: Arial, Helvetica, sans-serif;
 }
 
