--- a/leiska.html
+++ b/leiska.html
@@ -4,81 +4,14 @@
 <title>Säterinmetsän Sanomat</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-    width: 90%;
-    margin-left:auto;
-    margin-right:auto;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-  background-color: lightcoral;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: darkorange;
-  padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: lightcyan;
-  height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: burlywood;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
 </head>
 <body>
 
-<header>
+<div class=header>
   <h1>Säterinmetsän Sanomat</h1>
 </header>
 
-<section>
+<div class=section>
   <nav>
     <ul>
       <li><a href="#">Pääsivu</a></li>
@@ -86,7 +19,7 @@ footer {
     </ul>
   </nav>
   
-  <article>
+<div class=article>
     <h1>Säterinmetsän sää</h1>
     <p>10.11.2021 sää on kuin Mordorissa. Mitäpä muuta voi odottaa marraskuussa, jolloin kaikkien etätyöläisten ja opiskelijoiden suositellaan pysyttelevän visusti sisällä. Onneksi nykyään on helppo tilata ruokaa kotiin mobiilisovelluksella. Kavereittenkin kanssa voi kätevästi pitää Teams etäkokouksia.</p>
     <p>Kesää odotellessa voi tehdä kotona kaikkea sitä mitä ei kesällä todellakaan halua tehdä. Hyvällä tuurilla asunnon ehtii siivota joulukuntoon jo ennen joulua eikä sen jälkeen. Mutta jos ei ehdi niin onneksi on koko talvi ja kevät aikaa siivota ennen kesää Juhannusjuhlia ja mökkimatkaa varten. Sieltä onkin sitten kiva tulla siistiin kotiin.</p>
