--- a/leiska.html
+++ b/leiska.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
+    <link rel="stylesheet" href="css.css">
 <title>Säterinmetsän Sanomat</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
