--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   			<title>Kryptokyttääjä</title>
   	</head>
 <body>      	
-	<div class="nav">
-		<a HREF="second.html">LINKKI 2nd head sivulle</a><br>
-	</div>
 	
-	<div class="main">
-		<h1>Kryptokyttääjä / when Lambo-indeksi</h1>
+	<div class="header">
+		<h1>Kryptokyttääjä</h1>
+	</div>
+
+	<div class="nav">
+		<a HREF="second.html">2nd head</a><br>
+	</div>
+
+	<div class="main"></div>
 		<p style="text-align:center;">Bitcoin kurssi 24h</p>
-		<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js"></script>
+		<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js" margin: 0 auto;></script>
 		<br>
       	<p style="text-align:center;">Katso video äänet päällä</p>
-      		<video controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
+      		<video class="center" controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
 		<br>
 		<p style="text-align:center;">Pakollinen varoitus</p>
 		<br>
@@ -26,9 +30,10 @@
         	 </div>
 		<br>
 	</div>
-	<div class="main">
+
+	<div class="main" width=80%>
 		<p style="text-align:center;">Muista säännöt</p>
-        <ol class="alpha">
+        <ol class="alphabullet">
 			<li>Älä sijoita mitä et voi menettää
         	<li>Osta dippiä
 			<li>Riko sääntöjä
