--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 	<div class="main"></div>
 		<p style="text-align:center;">Bitcoin kurssi 24h</p>
-		<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js" margin: 0 auto;></script>
+		<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js" style="text-align:center;"></script>
 		<br>
       	<p style="text-align:center;">Katso video äänet päällä</p>
-      		<video class="center" controls poster="/lambo-start2.jpg">  <source src="https://jolaine666.github.io/final-countdown.mp4" type="video/mp4"></video>
+      		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 		<br>
 		<p style="text-align:center;">Pakollinen varoitus</p>
 		<br>
@@ -31,8 +31,8 @@
 		<br>
 	</div>
 
-	<div class="main" width=80%>
-		<p style="text-align:center;">Muista säännöt</p>
+	<div class="main">
+		<p style="text-align:center">Muista säännöt</p>
         <ol class="alphabullet">
 			<li>Älä sijoita mitä et voi menettää
         	<li>Osta dippiä
@@ -44,6 +44,10 @@
         	<li>Pidä hauskaa
         	<li>Too much stydying will turn your brain into bad guacamole!
 		</ul>
+	</div>
+	<br>
+	<div class="footer">
+		(c) Joakim 2021
 	</div>
 </body>
 </html>
