--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 
 	<div class="main"></div>
 		<p style="text-align:center;">Bitcoin kurssi 24h</p>
-		<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div><script src="https://widget.nomics.com/embed.js" style="text-align:center;"></script>
-		<br>
+		
+		<div class="nomics"></div>
+			<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div>
+
+				<script src="https://widget.nomics.com/embed.js"></script>
+		
+			<br>
+		</div>	
       	<p style="text-align:center;">Katso video äänet päällä</p>
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 		<br>
