--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<div class="main"></div>
 		<p style="text-align:center;">Bitcoin kurssi 24h</p>
 		
-			<div class="nomics"></div>
-				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR"></div>
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
 
 					<script src="https://widget.nomics.com/embed.js"></script>
 		
@@ -35,7 +35,7 @@
       		<div class="warning">
         	VAROITUS<br>
         	Ei taloudellisia neuvoja!
-        	 </div>
+        	</div>
 		<br>
 	</div>
 
