--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a HREF="second.html">2nd head</a><br>
 	</div>
 
-	<div class="main"></div>
+	<div class="main">
 		<p style="text-align:center;">Bitcoin kurssi 24h</p>
 		
 			<div class="nomics">
