--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 	</div>
 
 	<div class="nav">
-		<a HREF="second.html">2nd head</a><br>
+		<a HREF="index.html">Etusivu</a>
+		<a HREF="second.html">Toinen sivu</a><br>
 	</div>
 
-	<div class="main">
+	<div class="section">
 		<p style="text-align:center;">Bitcoin kurssi 24h</p>
 		
 			<div class="nomics">
@@ -40,7 +41,7 @@
 		<br>
 	</div>
 
-	<div class="main">
+	<div class="section">
 		<p style="text-align:center">Muista säännöt</p>
         <ol class="alphabullet">
 			<li>Älä sijoita mitä et voi menettää
