--- a/index.html
+++ b/index.html
@@ -13,47 +13,26 @@
 
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
-		<a HREF="second.html">Toinen sivu</a><br>
+		<a HREF="second.html">Kurssit</a>
+		<a HREF="third.html">Säännöt</a>
 	</div>
+	<br>
 
 	<div class="section">
-		<p style="text-align:center;">Bitcoin kurssi 24h</p>
-		
-			<div class="nomics">
-				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
-
-					<script src="https://widget.nomics.com/embed.js"></script>
-		
-				</div>
-			</div>
-
-      		<p style="text-align:center;">Katso video äänet päällä</p>
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 			<br>
+
+			<p style="text-align:center;">Katso video äänet päällä</p>
 			
-			<p style="text-align:center;">Pakollinen varoitus</p>
+			<h2><p style="text-align:center;">Pakollinen varoitus</p></h2>
 			<br>
       		
 			<div class="warning">
         		VAROITUS<br>
-        		Ei taloudellisia neuvoja!
+        		Sivustolla ei ole taloudellisia neuvoja!<br>
+				Sijoitat omalla vastuulla
         	</div>
 		<br>
-	</div>
-
-	<div class="section">
-		<p style="text-align:center">Muista säännöt</p>
-        <ol class="alphabullet">
-			<li>Älä sijoita mitä et voi menettää
-        	<li>Osta dippiä
-			<li>Riko sääntöjä
-		</ol>       
-        	<ul class="boxbullet">
-		<li>Syö hyvin
-        	<li>Nuku paljon
-        	<li>Pidä hauskaa
-        	<li>Too much stydying will turn your brain into bad guacamole!
-		</ul>
 	</div>
 	<br>
 	<div class="footer">
