--- a/second.html
+++ b/second.html
@@ -1,12 +1,41 @@
 <!DOCTYPE HTML>
-<HTML>
-    <HEAD>
-    2nd HEAD
-    </HEAD>
-<BODY>
-2nd PAGE<br>
-New update:<br>
-<a HREF="index.html"></a> 
-</BODY>
-</HTML>
+<html lang="fi">
+	<head>
+    	<link rel="stylesheet" href="css.css">
+  		<meta charset="utf-8"/>
+  			<title>Kryptokyttääjä</title>
+  	</head>
+<body>      	
+	
+	<div class="header">
+		<h1>Kryptokyttääjä</h1>
+	</div>
 
+	<div class="nav">
+		<a HREF="index.html">Etusivu</a>
+		<a HREF="second.html">Kurssit</a>
+		<a HREF="third.html">Säännöt</a>
+	</div>
+	<br>
+
+	<div class="section">
+		<h2><p style="text-align:center;">Bitcoin kurssi 24h</p></h2>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
+
+					<script src="https://widget.nomics.com/embed.js"></script>
+		
+				</div>
+			</div>
+      	
+		<br>
+	</div>
+
+	
+	<br>
+	<div class="footer">
+		(c) Joakim 2021
+	</div>
+</body>
+</html>
