--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<p style="text-align:center;">Katso video äänet päällä</p>
 			
-			<h2><p style="text-align:center;">Pakollinen varoitus</p></h2>
+			<p style="text-align:center;"><h2>Pakollinen varoitus</p></h2>
 			<br>
       		
 			<div class="warning">
