--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 			<br>
 
-			<p style="text-align:center;">Katso video äänet päällä</p>
-			
-			<p style="text-align:center;"><h2>Pakollinen varoitus</p></h2>
+			<p style="text-align:center;">Katso video äänet päällä</p><br><br>
+
+			<h2 style="text-align:center;">Pakollinen varoitus</h2>
 			<br>
       		
 			<div class="warning">
