--- a/second.html
+++ b/second.html
@@ -13,7 +13,7 @@
 
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
-		<a HREF="second.html">Kurssit</a>
+		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Säännöt</a>
 	</div>
 	<br>
