--- a/index.html
+++ b/index.html
@@ -3,40 +3,56 @@
 	<head>
     	<link rel="stylesheet" href="css.css">
   		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
   	</head>
 <body>      	
-	
+<header>	
 	<div class="header">
 		<h1>Kryptokyttääjä</h1>
 	</div>
+</header>
 
+<nav>
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Säännöt</a>
 	</div>
-	<br>
+</nav>
 
-	<div class="section">
+<div>
+<nav>
+	<div class="nav2">
+		<a HREF="index.html">Etusivu</a><br>
+		<a HREF="second.html">Kryptot</a><br>
+		<a HREF="third.html">Säännöt</a><br>
+	</div>
+</nav>
+<section>
+<article>
+	<div class="article">
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
-			<br>
-
-			<p style="text-align:center;">Katso video äänet päällä</p><br><br>
-
-			<h2 style="text-align:center;">Pakollinen varoitus</h2>
+		
+			<p id="center">Katso video äänet päällä</p>
+			<h2 id="center">Pakollinen varoitus</h2>
 			<br>
       		
-			<div class="warning">
+			<div id="warning">
         		VAROITUS<br>
         		Sivustolla ei ole taloudellisia neuvoja!<br>
 				Sijoitat omalla vastuulla
         	</div>
 		<br>
 	</div>
-	<br>
+</div>	
+</article>
+</section>
+
+<footer>
 	<div class="footer">
 		(c) Joakim 2021
 	</div>
+</footer>
 </body>
 </html>
