--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 		
 			<p id="center">Katso video äänet päällä</p>
-			<h2 id="center">Pakollinen varoitus</h2>
+			<h2>Pakollinen varoitus</h2>
 			<br>
       		
 			<div id="warning">
