--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a HREF="third.html">Säännöt</a>
 	</div>
 </nav>
-<section>
+
 <div>
 <nav>
 	<div class="nav2">
@@ -29,13 +29,13 @@
 		<a HREF="third.html">Säännöt</a><br>
 	</div>
 </nav>
-
+<section>
 <article>
 	<div class="article">
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 		
 			<p id="center">Katso video äänet päällä</p>
-			<h2>Pakollinen varoitus</h2>
+			<h2 id="center">Pakollinen varoitus</h2>
 			<br>
       		
 			<div id="warning">
