--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<div class="article">
       		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 		
-			<p id="center">Katso video äänet päällä</p>
-			<h2 id="center">Pakollinen varoitus</h2>
+			<p id="center-all">Katso video äänet päällä</p>
+			<h2 id="center-all">Pakollinen varoitus</h2>
 			<br>
       		
 			<div id="warning">
