--- a/second.html
+++ b/second.html
@@ -3,39 +3,53 @@
 	<head>
     	<link rel="stylesheet" href="css.css">
   		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
   	</head>
 <body>      	
-	
+<header>	
 	<div class="header">
 		<h1>Kryptokyttääjä</h1>
 	</div>
+</header>
 
+<nav>
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Säännöt</a>
 	</div>
-	<br>
+</nav>
 
-	<div class="section">
-		<h2><p style="text-align:center;">Bitcoin kurssi 24h</p></h2>
-		
-			<div class="nomics">
-				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
-
-					<script src="https://widget.nomics.com/embed.js"></script>
-		
-				</div>
-			</div>
-      	
-		<br>
+<nav>
+	<div class="nav2">
+		<a HREF="index.html">Etusivu</a><br>
+		<a HREF="second.html">Kryptot</a><br>
+		<a HREF="third.html">Säännöt</a><br>
 	</div>
+</nav>
 
+<section>
+<div class="section">
+	<h2><p style="text-align:center;">Bitcoin kurssi 24h</p></h2>
+	
+		<div class="nomics">
+			<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
+
+				<script src="https://widget.nomics.com/embed.js"></script>
+	
+			</div>
+		</div>
 	
 	<br>
+</div>
+</section>
+
+
+<footer>
 	<div class="footer">
 		(c) Joakim 2021
 	</div>
+</footer>
 </body>
 </html>
