--- a/third.html
+++ b/third.html
@@ -3,45 +3,61 @@
 	<head>
     	<link rel="stylesheet" href="css.css">
   		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
   	</head>
 <body>      	
-	
+<header>	
 	<div class="header">
 		<h1>Kryptokyttääjä</h1>
 	</div>
+</header>
 
+<nav>
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Säännöt</a>
 	</div>
-	<br>
-	
-    <div class="section">
-	<div class="column-rules" style=text-align:center>
-        <br>
-		<h2>Muista säännöt</h2>
- 		<br>
-		<li>Älä sijoita mitä<br>et voi menettää</li>
-        <li>Osta dippiä</li>
-	    <li>Riko sääntöjä</li>
-		<br>
-		<h2>Pidä huolta itsestäsi</h2>
-		<br>
-        <li>Syö hyvin</li>
-        <li>Nuku paljon</li>
-        <li>Pidä hauskaa</li>
-        <br>
-        <br>
-        <b>Liika opiskelu tekee aivoistasi<br>
-		pahaa guacamolea!</b><br>
-		<br>
+</nav>
+
+<nav>
+	<div class="nav2">
+		<a HREF="index.html">Etusivu</a><br>
+		<a HREF="second.html">Kryptot</a><br>
+		<a HREF="third.html">Säännöt</a><br>
 	</div>
-    </div>
-	<br>
+</nav>
+
+<section>
+    <div class="section">
+        <div class="column-rules" style=text-align:center>
+            <br>
+            <h2>Muista säännöt</h2>
+            <br>
+            <li>Älä sijoita mitä<br>et voi menettää</li>
+            <li>Osta dippiä</li>
+            <li>Riko sääntöjä</li>
+            <br>
+            <h2>Pidä huolta itsestäsi</h2>
+            <br>
+            <li>Syö hyvin</li>
+            <li>Nuku paljon</li>
+            <li>Pidä hauskaa</li>
+            <br>
+            <br>
+            <b>Liika opiskelu tekee aivoistasi<br>
+            pahaa guacamolea!</b><br>
+            <br>
+        </div>
+        </div>
+</section>
+
+
+<footer>
 	<div class="footer">
 		(c) Joakim 2021
 	</div>
+</footer>
 </body>
 </html>
