--- a/second.html
+++ b/second.html
@@ -31,7 +31,7 @@
 
 <section>
 <div class="section">
-	<h2><p style="text-align:center;">Bitcoin kurssi 24h</p></h2>
+	<h2 style="text-align:center;">Bitcoin kurssi 24h</h2>
 	
 		<div class="nomics">
 			<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
