--- a/third.html
+++ b/third.html
@@ -28,22 +28,23 @@
 		<a HREF="third.html">Säännöt</a><br>
 	</div>
 </nav>
-
+<br>
+<br>
 <section>
     <div class="section">
         <div class="column-rules" style=text-align:center>
             <br>
             <h2>Muista säännöt</h2>
             <br>
-            <li>Älä sijoita mitä<br>et voi menettää</li>
-            <li>Osta dippiä</li>
-            <li>Riko sääntöjä</li>
+            Älä sijoita mitä<br>et voi menettää<br>
+            Osta dippiä<br>
+            Riko sääntöjä<br>
             <br>
             <h2>Pidä huolta itsestäsi</h2>
             <br>
-            <li>Syö hyvin</li>
-            <li>Nuku paljon</li>
-            <li>Pidä hauskaa</li>
+            Syö hyvin<br>
+            Nuku paljon<br>
+            Pidä hauskaa<br>
             <br>
             <br>
             <b>Liika opiskelu tekee aivoistasi<br>
