--- a/third.html
+++ b/third.html
@@ -18,6 +18,8 @@
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Säännöt</a>
+		<a HREF="http://www.google.com/" target="_blank">Google</a>
+		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 </nav>
 
@@ -26,29 +28,40 @@
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
 		<a HREF="third.html">Säännöt</a><br>
+		<a HREF="http://www.google.com/" target="_blank">Google</a>
+		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 </nav>
-<br>
-<br>
+
 <section>
-    <div class="section">
-        <div class="column-rules" style=text-align:center>
+    <div class="article2">
+        <div class="kolumni">
             <br>
-            <h2>Muista säännöt</h2>
+            <h2>Mikä on kryptovaluutta</h2>
+            <p>Kryptovaluutta on kryptografiaan perustuva digitaalinen virtuaalivaluutta. Kryptovaluuttoja on nykyisin yli 5000 kappaletta, ja uusia syntyy koko ajan[1]. Niistä tunnetuin on vuonna 2008 syntynyt Bitcoin.[2] Bitcoinin lisäksi on olemassa useita satoja erilaisia kryptovaluuttoja, joita yleensä kutsutaan vaihtoehtovaluutoiksi (”altcoins”). Niillä saattaa olla erilaisia ominaisuuksia ja niiden käyttötarkoitus voi olla määritelty.</p>
+            <p>Nykyisin myös pankit hyödyntävät kryptovaluuttoja. Tunnetuin esimerkki on Ripple-yhtiön luoma kryptovaluutta XRP, jota voidaan hyödyntää pankkien likviditeettiongelmissa. Myös monet valtiot suunnittelevat omaa kryptovaluuttaansa. Maailman ensimmäinen valtiollinen kryptovaluutta on Venezuelan Petro. Ruotsi on tutkinut myös vuosia mahdollista eKruunun käyttöönottoa. Suomen naapurimaista myös Viro ja Venäjä ovat suunnitelleet kansallisten kryptovaluuttojen käyttöönottoa.</p>
+            <p>Kryptovaluuttojen arvo määräytyy kysynnän ja tarjonnan mukaan kryptovaluuttamarkkinoilla, johon suosion lisäksi vaikuttavat kyseisen valuutan enimmäismäärä, kierrossa oleva valuuttamäärä ja louhinnan kustannukset, jotka vaihtelevat eri kryptovaluuttojen kesken. 5305:n eri kryptovaluutan yhteenlaskettu markkina-arvo oli 25. toukokuuta 2021 noin 1650 miljardia yhdysvaltain dollaria, josta Bitcoinin osuus oli noin 43,6 % ja Ethereumin osuus noin 18,2 %.[3]</p>
+            <p>Vuonna 2019 The Wall Street Journal uutisoi, että sosiaalisen median palvelu Facebook kehittää omaa kryptovaluuttaansa.</p>
+        </div>
+        </div>
+    <div class="article2">
+        <div class="kolumni">
             <br>
-            Älä sijoita mitä<br>et voi menettää<br>
+            <h1><b>Muista säännöt</b></h1>
+            <br>
+            <h2>Älä sijoita mitä et voi menettää<br>
             Osta dippiä<br>
-            Riko sääntöjä<br>
+            Riko sääntöjä</h2>
             <br>
-            <h2>Pidä huolta itsestäsi</h2>
+            <h1><b>Pidä huolta itsestäsi</b></1>
             <br>
-            Syö hyvin<br>
+            <h2>Syö hyvin<br>
             Nuku paljon<br>
             Pidä hauskaa<br>
             <br>
             <br>
             <b>Liika opiskelu tekee aivoistasi<br>
-            pahaa guacamolea!</b><br>
+            pahaa guacamolea!</b></h2><br>
             <br>
         </div>
         </div>
@@ -62,3 +75,4 @@
 </footer>
 </body>
 </html>
+
