--- a/second.html
+++ b/second.html
@@ -18,6 +18,8 @@
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Säännöt</a>
+		<a HREF="http://www.google.com/" target="_blank">Google</a>
+		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 </nav>
 
@@ -26,6 +28,8 @@
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
 		<a HREF="third.html">Säännöt</a><br>
+		<a HREF="http://www.google.com/" target="_blank">Google</a>
+		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 </nav>
 
