--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
-		<a HREF="third.html">Säännöt</a>
+		<a HREF="third.html">Yleistä</a>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
@@ -27,7 +27,7 @@
 	<div class="nav2">
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
-		<a HREF="third.html">Säännöt</a><br>
+		<a HREF="third.html">Yleistä</a><br>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
