--- a/second.html
+++ b/second.html
@@ -17,25 +17,25 @@
 	<div class="nav">
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
-		<a HREF="third.html">Säännöt</a>
+		<a HREF="third.html">Yleistä</a>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 </nav>
 
 <nav>
-	<div class="nav2">
+	<div class="nav3">
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
-		<a HREF="third.html">Säännöt</a><br>
+		<a HREF="third.html">Yleistä</a><br>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 </nav>
 
 <section>
-<div class="section">
-	<h2 style="text-align:center;">Bitcoin kurssi 24h</h2>
+<div class="article">
+	<h2 style="text-align:center;">Kryptovaluuttojen kursseja 24h ajalta</h2>
 	
 		<div class="nomics">
 			<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
@@ -44,7 +44,27 @@
 	
 			</div>
 		</div>
+		<div class="nomics">
+			<div class="nomics-ticker-widget" data-name="Etherium" data-base="ETH" data-quote="EUR">
+
+				<script src="https://widget.nomics.com/embed.js"></script>
 	
+			</div>
+		</div>
+		<div class="nomics">
+			<div class="nomics-ticker-widget" data-name="Binance Coin" data-base="BNB" data-quote="EUR">
+
+				<script src="https://widget.nomics.com/embed.js"></script>
+	
+			</div>
+		</div>
+		<div class="nomics">
+			<div class="nomics-ticker-widget" data-name="Solana" data-base="SOL" data-quote="EUR">
+
+				<script src="https://widget.nomics.com/embed.js"></script>
+	
+			</div>
+		</div>
 	<br>
 </div>
 </section>
