--- a/third.html
+++ b/third.html
@@ -47,15 +47,15 @@
     <div class="article2">
         <div class="kolumni">
             <br>
-            <h1><b>Muista säännöt</b></h1>
+            <h2><b>Muista säännöt</b></h2>
             <br>
-            <h2>Älä sijoita mitä et voi menettää<br>
+            <h2>Älä sijoita mitä et voi menettää</h2><br>
             Osta dippiä<br>
             Riko sääntöjä</h2>
             <br>
-            <h1><b>Pidä huolta itsestäsi</b></1>
+            <h1><b>Pidä huolta itsestäsi</b><br>
             <br>
-            <h2>Syö hyvin<br>
+            <h2>Syö hyvin</h2><br>
             Nuku paljon<br>
             Pidä hauskaa<br>
             <br>
